# apex-atlas

./: .dockerignore  .gitignore  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  ig-conformance.yml  pages.yml  publish-pypi.yml
HealthScores/daniel-ward-synthetic/: GPX-SYN-0000000001-8.json  MeasureReport-4e647b27-60dd-5946-9b8f-b1471cadc1e5.json  MeasureReport-4e79df96-b377-5d30-8619-c82eac6f0936.json  MeasureReport-c467bd03-ce1f-5dac-900b-f095c2fec0b1.json  MeasureReport-d23247d5-6438-5e99-a183-0b4a162de515.json  MeasureReport-feb5aaa3-5e62-5733-9ed7-a22c02e5ea3e.json  generation-metadata.json
deploy/: fly.toml  render.yaml
docs/: api.md  architecture.md  ci-and-deploys.md  clinical-review.html  commercial-one-pager.md  deploy.md  fidelity-scorecard.md  generator.html  gtm.md  index.html  ingestion.md  integration-cookbooks.md  known-limitations.md  module-catalog.md  parquet-schema.md  provider-directory.md  roadmap.md  sdoh-causal-benchmark.md  sdoh-vs-synthea.md  security-provenance-faq.md  smart-scheduling-links.md  why-atlas.md
docs/authoring/: module_dsl.md  research_authoring.md
parker-atlas-scaffold/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
parker-atlas-scaffold/docs/: roadmap.md
samples/: README.md
samples/clinical-trial-sandbox/: GPX-SYN-0000000001-8.json  GPX-SYN-0000000002-6.json  GPX-SYN-0000000003-4.json  (+48 more)
scripts/: build_cms_connectathon_scheduling.py  build_fidelity_scorecard.py  build_provider_roster_table.py  build_sample_cohorts.sh  demo_ai_training.sh  demo_fhir_integration.sh  demo_quality_measures.sh  expand_provider_roster.py  extract_sample_patients.py  extract_sample_provider_directory.py  extract_sample_scheduling.py  sdoh_causal_benchmark.py  sdoh_compare.py  sync_module_catalog_tiers.py
tests/: test_author_promote.py  test_author_research.py  test_author_synthesize.py  test_batch_a_modules.py  test_batch_b_modules.py  test_batch_c_modules.py  test_bundled_progressions_overlays.py  test_cli_as_of.py  test_cli_author.py  test_cli_claims_mortality.py  test_cli_coverage.py  test_cli_generate.py  test_cli_gtm.py  test_cli_ndjson.py  test_cli_notes.py  test_cli_parquet.py  test_cli_providers.py  test_cli_ref_style.py  test_cli_report.py  test_cli_scheduling.py  test_cohort.py  test_cohort_ndjson.py  test_cross_module_progressions.py  test_demographics.py  test_emit_fidelity.py  test_expectations.py  test_fhir_carin_bb.py  test_fhir_claims_and_new_profiles.py  test_fhir_condition.py  test_fhir_coverage.py  test_fhir_document_reference.py  test_fhir_encounter.py  test_fhir_medication_request.py  test_fhir_observation.py  test_fhir_patient.py  test_fhir_procedure.py  test_fhir_providers.py  test_fhir_scheduling.py  test_gpx.py  test_gtm_expectations.py  (+38 more)
(+483 files in other folders)
