[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "parker-atlas"
version = "0.1.0"
description = "A next-generation synthetic FHIR patient population generator."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Parker Health, Inc.", email = "atlas@parkerapex.com" },
]
keywords = [
    "fhir", "synthetic-data", "healthcare", "ehr", "patient-generator",
    "us-core", "hl7", "clinical-data", "parker-health", "parker-atlas",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

# Only deps actually imported today live here. As subsystems land,
# promote them from the extras groups below into the base set.
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fhir.resources>=7.1.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
data = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]
modules = [
    "pyyaml>=6.0",
]
notes = [
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "orjson>=3.9.0",
]
logging = [
    "structlog>=24.1.0",
]
llm = [
    "anthropic>=0.25.0",
    "openai>=1.14.0",
]
validation = [
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]
all = [
    "parker-atlas[data,modules,notes,logging,llm,validation]",
]

[project.scripts]
atlas = "parker_atlas.cli:app"

[project.urls]
Homepage = "https://github.com/ParkerApex/parker-atlas"
Documentation = "https://parkerapex.com/atlas/docs"
Repository = "https://github.com/ParkerApex/parker-atlas"
"Bug Tracker" = "https://github.com/ParkerApex/parker-atlas/issues"
"Parker APEX" = "https://parkerapex.com"

[tool.hatch.build.targets.wheel]
packages = ["src/parker_atlas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers --cov=parker_atlas --cov-report=term-missing"
